Start numpy exercise.

--- a/notebooks/my_jupyter_notebooks/numpy_ndarrays.ipynb
+++ b/notebooks/my_jupyter_notebooks/numpy_ndarrays.ipynb
@@ -167,7 +167,8 @@
    "metadata": {},
    "source": [
     "## MULTI-DIMENSIONAL ARRAYS IN NUMPY\n",
-    "Indexing arrays in numpy [NUM_ROWS][NUM_COLUMNS]"
+    "Indexing arrays in numpy [NUM_ROWS][NUM_COLUMNS]<br>\n",
+    "Axis 0 is columns, Axis 1 is rows"
    ]
   },
   {
@@ -591,10 +592,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.83089283 0.05292536 0.22834897 0.36019342 0.11649259 0.28717354]\n",
-      " [0.85918285 0.0696549  0.06027752 0.14446143 0.967476   0.58537113]\n",
-      " [0.65360169 0.80867249 0.47297977 0.96517183 0.5987538  0.63082705]\n",
-      " [0.34910055 0.64075361 0.75364438 0.69862544 0.09566628 0.08770779]]\n"
+      "[[0.09185817 0.03745655 0.71341762 0.39649741 0.64575452 0.19478731]\n",
+      " [0.86929593 0.19036257 0.765738   0.10858729 0.02038501 0.18491185]\n",
+      " [0.48343928 0.28225053 0.21522634 0.27385871 0.53078935 0.37796014]\n",
+      " [0.38788967 0.88612379 0.63460884 0.08177094 0.53131373 0.36964273]]\n"
      ]
     }
    ],
@@ -613,8 +614,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7 3 8 2 4 3 5 1 7 7]\n",
-      " [7 6 1 1 2 1 1 5 5 4]]\n"
+      "[[8 2 2 2 6 7 3 5 5 6]\n",
+      " [6 4 2 6 1 1 5 1 7 3]]\n"
      ]
     }
    ],
@@ -633,25 +634,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.68207399  0.10321441  0.27347161 ... -0.57221744  0.04932712\n",
-      "   0.48432056]\n",
-      " [-0.00960367 -0.35447498  0.10466994 ... -0.27967091  0.09895013\n",
-      "  -0.36209825]\n",
-      " [-0.21243545  0.03051265  0.67968776 ...  0.8766138  -0.74677826\n",
-      "  -0.12654438]\n",
+      "[[-0.12804761  0.18639495  0.1705707  ...  0.5672867  -0.49467641\n",
+      "   0.30431981]\n",
+      " [ 0.58087901  0.55342523 -0.00304509 ...  0.01491253  0.73017614\n",
+      "  -0.83854076]\n",
+      " [-0.03938273  0.23379586 -0.50513369 ... -0.55735157 -0.31397126\n",
+      "   0.07609401]\n",
       " ...\n",
-      " [ 0.09259419  0.01600634  0.16920069 ...  0.2947813  -0.09075308\n",
-      "   0.26778024]\n",
-      " [-0.07893512 -0.32705091  0.01177643 ...  0.12550947  0.81047316\n",
-      "  -0.74663095]\n",
-      " [ 0.45750035  0.23448376  0.35254476 ... -0.53014229 -0.90599076\n",
-      "   0.55045336]]\n",
+      " [-0.1741635  -0.33376321 -0.01482697 ...  0.4091355  -0.2232288\n",
+      "  -0.08295528]\n",
+      " [-0.09581066 -0.03764567 -0.37923269 ...  0.46636349 -0.0825266\n",
+      "  -0.00328703]\n",
+      " [ 0.43223717  0.40620143  1.08420461 ... -0.65495243 -0.31188941\n",
+      "   0.76811656]]\n",
       "Size:  10000\n",
-      "Mean:  -0.00030283210791572015\n",
-      "Maximum value:  1.847838244487644\n",
-      "Minimum value:  -2.156368013309387\n",
-      "Positive numbers:  5011\n",
-      "Negative numbers:  4989\n"
+      "Mean:  -0.002540440538038735\n",
+      "Maximum value:  1.9031090999693898\n",
+      "Minimum value:  -1.9522209300393625\n",
+      "Positive numbers:  5020\n",
+      "Negative numbers:  4980\n"
      ]
     }
    ],
@@ -1126,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "fb29c6e8",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "1d2589fa",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "id": "242590ff",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "id": "ee8caaff",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "id": "1566268d",
    "metadata": {},
    "outputs": [
@@ -1229,10 +1230,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original:  [1 6 7 5 1 4 1 8 9 1]\n",
-      "Sorted out of place:  [1 1 1 1 4 5 6 7 8 9]\n",
-      "After sorting:  [1 6 7 5 1 4 1 8 9 1]\n",
-      "Unique items in a:  [1 4 5 6 7 8 9]\n"
+      "Original:  [1 9 3 0 7 0 9 3 4 4]\n",
+      "Sorted out of place:  [0 0 1 3 3 4 4 7 9 9]\n",
+      "After sorting:  [1 9 3 0 7 0 9 3 4 4]\n",
+      "Unique items in a:  [0 1 3 4 7 9]\n"
      ]
     }
    ],
@@ -1246,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
    "id": "d7cef13d",
    "metadata": {},
    "outputs": [
@@ -1254,9 +1255,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original:  [6 5 3 5 7 1 4 4 2 6]\n",
-      "After sorting:  [6 5 3 5 7 1 4 4 2 6]\n",
-      "Unique items in a:  [1 2 3 4 5 6 7]\n"
+      "Original:  [7 5 2 9 5 7 6 3 5 5]\n",
+      "After sorting:  [7 5 2 9 5 7 6 3 5 5]\n",
+      "Unique items in a:  [2 3 5 6 7 9]\n"
      ]
     }
    ],
@@ -1278,27 +1279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "2f516159",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[4 9 9 9 0]\n",
-      " [4 1 6 3 2]\n",
-      " [4 3 7 0 7]\n",
-      " [9 8 1 1 9]\n",
-      " [5 3 2 5 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 46,
    "id": "56890738",
    "metadata": {},
    "outputs": [
@@ -1307,25 +1296,25 @@
      "output_type": "stream",
      "text": [
       "Original:\n",
-      " [[8 5 6 5 5]\n",
-      " [7 6 8 3 3]\n",
-      " [2 9 4 5 9]\n",
-      " [7 7 7 5 7]\n",
-      " [5 4 9 6 7]]\n",
+      " [[1 1 6 1 5]\n",
+      " [5 1 5 4 6]\n",
+      " [5 1 6 4 7]\n",
+      " [9 0 3 0 0]\n",
+      " [8 6 3 3 1]]\n",
       "\n",
       "Sorted Columns:\n",
-      " [[2 4 4 3 3]\n",
-      " [5 5 6 5 5]\n",
-      " [7 6 7 5 7]\n",
-      " [7 7 8 5 7]\n",
-      " [8 9 9 6 9]]\n",
+      " [[1 0 3 0 0]\n",
+      " [5 1 3 1 1]\n",
+      " [5 1 5 3 5]\n",
+      " [8 1 6 4 6]\n",
+      " [9 6 6 4 7]]\n",
       "\n",
       "Sorted Rows:\n",
-      " [[5 5 5 6 8]\n",
-      " [3 3 6 7 8]\n",
-      " [2 4 5 9 9]\n",
-      " [5 7 7 7 7]\n",
-      " [4 5 6 7 9]]\n"
+      " [[1 1 1 5 6]\n",
+      " [1 4 5 5 6]\n",
+      " [1 4 5 6 7]\n",
+      " [0 0 0 3 9]\n",
+      " [1 3 3 6 8]]\n"
      ]
     }
    ],
@@ -1336,6 +1325,353 @@
     "print('Sorted Columns:\\n', np.sort(a, axis = 0))\n",
     "print()\n",
     "print('Sorted Rows:\\n', np.sort(a, axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be2887c",
+   "metadata": {},
+   "source": [
+    "## ARITHMETIC OPERATIONS ON ARRAYS AND BROADCASTING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "59321d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  [0 1 2 3]\n",
+      "b:  [5.5 6.5 7.5 8.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([0, 1 , 2, 3])\n",
+    "b = np.array([5.5, 6.5, 7.5, 8.5])\n",
+    "print('a: ', a)\n",
+    "print('b: ', b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "7b89d766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.5  7.5  9.5 11.5]\n",
+      "[ 5.5  7.5  9.5 11.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a + b)\n",
+    "print(np.add(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "a8fa0c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5.5 -5.5 -5.5 -5.5]\n",
+      "[-5.5 -5.5 -5.5 -5.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a - b)\n",
+    "print(np.subtract(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "825d57fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.   6.5 15.  25.5]\n",
+      "[ 0.   6.5 15.  25.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a * b)\n",
+    "print(np.multiply(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ef409597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.15384615 0.26666667 0.35294118]\n",
+      "[0.         0.15384615 0.26666667 0.35294118]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a / b)\n",
+    "print(np.divide(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "50acd726",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = a.reshape([2, 2])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "05d5f058",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 2]\n",
+      " [4 6]]\n",
+      "\n",
+      "[[0 0]\n",
+      " [0 0]]\n",
+      "\n",
+      "[[0 1]\n",
+      " [4 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x + x)\n",
+    "print()\n",
+    "print(x - x)\n",
+    "print()\n",
+    "print(x * x)\n",
+    "#print(x / x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "27897ad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =  [0 1 2 3 4]\n",
+      "EXP(a) =  [ 1.          2.71828183  7.3890561  20.08553692 54.59815003]\n",
+      "SQRT(a) =  1.4142135623730951\n",
+      "POW(a, 2) =  [ 0  1  4  9 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(5)\n",
+    "print('a = ', a)\n",
+    "print('EXP(a) = ', np.exp(a))\n",
+    "print('SQRT(a) = ', np.sqrt(2))\n",
+    "print('POW(a, 2) = ', np.power(a, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d4cb7b5",
+   "metadata": {},
+   "source": [
+    "### STATISTICAL FUNCTIONS\n",
+    "mean, sum, std, median, max, min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "0ada73bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1, 5).reshape([2,2])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "91419eac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of all elements:\n",
+      " 2.5\n",
+      "Average of all elements by column:\n",
+      " [2. 3.]\n",
+      "Average of all elements by row:\n",
+      " [1.5 3.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Average of all elements:\\n', np.mean(a))\n",
+    "print('Average of all elements by column:\\n', np.mean(a, axis = 0))\n",
+    "print('Average of all elements by row:\\n', np.mean(a, axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54fa6cf",
+   "metadata": {},
+   "source": [
+    "### CHANGE VALUE OF ALL ARRAY ELEMENTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2d063edf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "\n",
+      "[[ 3  6]\n",
+      " [ 9 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1, 5).reshape([2,2])\n",
+    "print(a)\n",
+    "print()\n",
+    "print(3 * a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "28f626e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "\n",
+      "[1 2 3]\n",
+      "\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1, 10).reshape([3,3])\n",
+    "b = np.arange(1, 4)\n",
+    "c = np.arange(1, 4).reshape([3, 1])\n",
+    "print(a)\n",
+    "print()\n",
+    "print(b)\n",
+    "print()\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "d63928e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + b:\n",
+      " [[ 2  4  6]\n",
+      " [ 5  7  9]\n",
+      " [ 8 10 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a + b:\\n', a + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "4a9720eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + c:\n",
+      " [[ 2  3  4]\n",
+      " [ 6  7  8]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a + c:\\n', a + c)"
    ]
   }
  ],
