--- a/numpy_pandas_matplotlib/Mean Normalization and Data Separation.ipynb
+++ b/numpy_pandas_matplotlib/Mean Normalization and Data Separation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of all values of X_norm:  -2.5401902803423582e-17\n",
-      "Average of the minimum values in each column:  -1.7376195152805232\n",
-      "Average of the maximum values in each column:  1.7236159260572639\n"
+      "Mean of all values of X_norm:  -2.3092638912203255e-17\n",
+      "Average of the minimum values in each column:  -1.7106664777456213\n",
+      "Average of the maximum values in each column:  1.7282999186879073\n"
      ]
     }
    ],
@@ -165,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 0, 4, 3])"
+       "array([0, 4, 2, 3, 1])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,32 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make any necessary calculations.\n",
     "# You can save your calculations into variables to use later.\n",
     "num_rows = np.shape(X_norm)[0]\n",
-    "print(num_rows)\n",
+    "sixty = int(num_rows * .6)\n",
+    "eighty = int(num_rows * .8)\n",
     "\n",
     "# Create a Training Set\n",
     "\n",
-    "#X_train =\n",
+    "X_train = X_norm[row_indices[:sixty], :]\n",
     "\n",
     "# Create a Cross Validation Set\n",
-    "#X_crossVal =\n",
+    "X_crossVal = X_norm[row_indices[sixty:eighty], :]\n",
     "\n",
     "# Create a Test Set\n",
-    "#X_test ="
+    "X_test = X_norm[row_indices[eighty:], :]"
    ]
   },
   {
@@ -249,25 +242,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X_train:  (600, 20)\n",
+      "Shape of X_crossVal:  (200, 20)\n",
+      "Shape of X_test:  (200, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of X_train\n",
-    "\n",
+    "print('Shape of X_train: ', np.shape(X_train))\n",
     "\n",
     "# Print the shape of X_crossVal\n",
+    "print('Shape of X_crossVal: ', np.shape(X_crossVal))\n",
     "\n",
-    "\n",
-    "# Print the shape of X_test\n"
+    "# Print the shape of X_test\n",
+    "print('Shape of X_test: ', np.shape(X_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
