--- a/numpy_pandas_matplotlib/notes/pandas.ipynb
+++ b/numpy_pandas_matplotlib/notes/pandas.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cd956a05",
    "metadata": {},
    "source": [
-    "# PANDAS SERIES"
+    "# PANDAS SERIES\n",
+    "[10 Minutes to pandas](https://pandas.pydata.org/pandas-docs/stable/user_guide/10min.html)"
    ]
   },
   {
