First third of linear algebra.

--- a/numpy_pandas_matplotlib/notes/jupyter_notes.ipynb
+++ b/numpy_pandas_matplotlib/notes/jupyter_notes.ipynb
@@ -6,7 +6,19 @@
    "metadata": {},
    "source": [
     "# JUPYTER NOTEBOOK TIPS\n",
-    "[Markdown Basic Syntax](https://www.markdownguide.org/basic-syntax/)"
+    "[Markdown Basic Syntax](https://www.markdownguide.org/basic-syntax/)<br>\n",
+    "[Markdown and LaTeX in Jupyter Notebooks](https://towardsdatascience.com/write-markdown-latex-in-the-jupyter-notebook-10985edb91fd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25c11da5",
+   "metadata": {},
+   "source": [
+    "# LaTeX Notes\n",
+    "[LaTeX Cheatsheet](https://www.authorea.com/users/77723/articles/110898-how-to-write-mathematical-equations-expressions-and-symbols-with-latex-a-cheatsheet)<br>\n",
+    "[LaTeX Cookbook](http://www.personal.ceu.hu/tex/cookbook.html)<br>\n",
+    "[Rendering Matrices in LaTeX](https://www.overleaf.com/learn/latex/Matrices)"
    ]
   }
  ],
