--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -27,11 +27,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x12201f0f390>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Imports here"
+    "# Imports here\n",
+    "import time\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch import optim\n",
+    "\n",
+    "from torchvision import datasets, transforms, models\n",
+    "\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "torch.manual_seed(0)"
    ]
   },
   {
@@ -50,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,18 +84,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "data_transforms = \n",
+    "train_transforms = transforms.Compose([transforms.RandomRotation(30),\n",
+    "                                       transforms.RandomResizedCrop(224),\n",
+    "                                       transforms.RandomHorizontalFlip(),\n",
+    "                                       transforms.ToTensor(),\n",
+    "                                       transforms.Normalize([.485, .456, .406],\n",
+    "                                                            [.229, .224, .225])])\n",
+    "\n",
+    "validation_train_transforms = transforms.Compose([transforms.Resize(255),\n",
+    "                                                   transforms.CenterCrop(224),\n",
+    "                                                   transforms.ToTensor(),\n",
+    "                                                   transforms.Normalize([.485, .456, .406],\n",
+    "                                                                        [.229, .224, .225])])\n",
     "\n",
     "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = \n",
+    "train_data = datasets.ImageFolder(train_dir, transform=train_transforms)\n",
+    "validate_data = datasets.ImageFolder(valid_dir, transform=validation_train_transforms)\n",
+    "test_data = datasets.ImageFolder(test_dir, transform=validation_train_transforms)\n",
     "\n",
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = "
+    "batch_size = 1\n",
+    "train_loader = torch.utils.data.DataLoader(train_data, batch_size=batch_size)\n",
+    "validate_loader = torch.utils.data.DataLoader(validate_data, batch_size=batch_size)\n",
+    "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size)"
    ]
   },
   {
@@ -87,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,11 +162,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Build and train your network"
+    "# Build network\n",
+    "model = models.vgg16(pretrained=True)\n",
+    "\n",
+    "# Freeze model parameters\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "    \n",
+    "# In features: 25088, Output 102 classes\n",
+    "\"\"\"model.classifier = nn.Sequential(OrderedDict([('fc1', nn.Linear(25088, 4096)),\n",
+    "                                              ('relu', nn.ReLU()),\n",
+    "                                              ('dropout', nn.Dropout(.2)),\n",
+    "                                              ('fc2', nn.Linear(4096, 1024)),\n",
+    "                                              ('relu', nn.ReLU()),\n",
+    "                                              ('fc3', nn.Linear(1024, 102)),\n",
+    "                                              ('out', nn.LogSoftmax(dim=1))]))\"\"\"\n",
+    "\n",
+    "model.classifier = nn.Sequential(OrderedDict([('fc1', nn.Linear(25088, 4096)),\n",
+    "                                              ('relu', nn.ReLU()),\n",
+    "                                              ('fc2', nn.Linear(4096, 102)),\n",
+    "                                              ('out', nn.LogSoftmax(dim=1))]))\n",
+    "\n",
+    "# Define optimizer\n",
+    "optimizer = optim.Adam(model.classifier.parameters(), lr=0.003)\n",
+    "\n",
+    "# Define criterion\n",
+    "criterion = nn.NLLLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-56bbea5cae8c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m         \u001b[0mtrain_loss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     print(f\"Epoch {e+1}/{epochs}.. \",\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Train Network\n",
+    "epochs = 1\n",
+    "\n",
+    "# Put model in training mode\n",
+    "model.train()\n",
+    "\n",
+    "# Send model to defined device\n",
+    "model.to(device)\n",
+    "\n",
+    "for e in range(epochs):\n",
+    "    \n",
+    "    train_loss = 0\n",
+    "        \n",
+    "    for images, labels in train_loader:\n",
+    "        \n",
+    "        # Send training to device\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "        \n",
+    "        # Initialize optimizer\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        # Send training data to model, compute loss, and calcuate gradients\n",
+    "        log_p = model.forward(images)\n",
+    "        loss = criterion(log_p, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        train_loss += loss.item()\n",
+    "    \n",
+    "    print(f\"Epoch {e+1}/{epochs}.. \",\n",
+    "          f\"Training Loss: {train_loss/len(train_loader):.3f}\")"
    ]
   },
   {
@@ -142,11 +256,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 01/01..  Testing Loss: 5.548..  Accuracy: 0.032\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Do validation on the test set"
+    "# Test the newly trained network\n",
+    "epochs = 1\n",
+    "\n",
+    "# Put model in evaluation mode and disable gradient calculation\n",
+    "model.eval()\n",
+    "torch.no_grad()\n",
+    "\n",
+    "# Send model to defined device\n",
+    "model.to(device)\n",
+    "\n",
+    "for e in range(epochs):\n",
+    "    \n",
+    "    test_loss = 0\n",
+    "    accuracy = 0\n",
+    "    \n",
+    "    for images, labels in test_loader:\n",
+    "       \n",
+    "        # Send training to device\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "        \n",
+    "        # Send training data to model, compute loss, and calcuate gradients\n",
+    "        log_p = model.forward(images)\n",
+    "        test_loss += criterion(log_p, labels).item()\n",
+    "        \n",
+    "        # Calculate class probabilities and determine \"matches\"\n",
+    "        class_p = torch.exp(log_p)\n",
+    "        top_p, top_class = class_p.topk(1, dim=1)\n",
+    "        equals = top_class == labels.view(*top_class.shape)\n",
+    "        accuracy += torch.mean(equals.type(torch.FloatTensor)).item()        \n",
+    "    \n",
+    "    print(f\"Epoch {e+1:0>2d}/{epochs:0>2d}.. \",\n",
+    "          f\"Testing Loss: {test_loss/len(test_loader):.3f}.. \",\n",
+    "          f\"Accuracy: {accuracy/len(test_loader):.3f}\")"
    ]
   },
   {
@@ -168,7 +322,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint \n",
+    "model.class_to_inx = image_datasets['train'].class_to_idx\n",
+    "\n",
+    "checkpoint = {'input_size': 25088,\n",
+    "              'output_size': 102,\n",
+    "              'hidden_layers': [each.out_features for each in model.hidden_layers],\n",
+    "              'state_dict': model.state_dict(),\n",
+    "              'optimizer_state': optimizer.state_dict}\n",
+    "\n",
+    "torch.save(checkpoint, 'checkpoint.pth')"
    ]
   },
   {
@@ -186,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n"
    ]
   },
   {
